--- a/letsencrypt-setup.html
+++ b/letsencrypt-setup.html
@@ -1,6 +1,7 @@
 ---
 layout: null
-permalink: /.well-known/acme-challenge/6E2cR79cGQ2C0vr4fYmPZ-p3cQ_Kn_P1zwO4XZsYpOA._Fmxv5cYChMq-ZhtvuK4MCocZHorOKatkcFx7CPhI44.html/
+permalink: /.well-known/acme-challenge/Mw0-7IxoCmkvzCTA8YYyhYqHX2tBo_COdirQzQtiV_w._Fmxv5cYChMq-ZhtvuK4MCocZHorOKatkcFx7CPhI44.html
+
 ---
 
-6E2cR79cGQ2C0vr4fYmPZ-p3cQ_Kn_P1zwO4XZsYpOA._Fmxv5cYChMq-ZhtvuK4MCocZHorOKatkcFx7CPhI44
+Mw0-7IxoCmkvzCTA8YYyhYqHX2tBo_COdirQzQtiV_w._Fmxv5cYChMq-ZhtvuK4MCocZHorOKatkcFx7CPhI44
