--- a/letsencrypt-setup.html
+++ b/letsencrypt-setup.html
@@ -1,7 +1,7 @@
 ---
 layout: null
-permalink: /.well-known/acme-challenge/Mw0-7IxoCmkvzCTA8YYyhYqHX2tBo_COdirQzQtiV_w._Fmxv5cYChMq-ZhtvuK4MCocZHorOKatkcFx7CPhI44.html
+permalink: /.well-known/acme-challenge/lmnaSCS9fDKdSNQHf_CL0m-QnApxMIOSiHrTR1V6VXw
 
 ---
 
-Mw0-7IxoCmkvzCTA8YYyhYqHX2tBo_COdirQzQtiV_w._Fmxv5cYChMq-ZhtvuK4MCocZHorOKatkcFx7CPhI44
+lmnaSCS9fDKdSNQHf_CL0m-QnApxMIOSiHrTR1V6VXw._Fmxv5cYChMq-ZhtvuK4MCocZHorOKatkcFx7CPhI44
