--- a/letsencrypt-setup.html
+++ b/letsencrypt-setup.html
@@ -1,7 +1,7 @@
 ---
 layout: null
-permalink: /.well-known/acme-challenge/lmnaSCS9fDKdSNQHf_CL0m-QnApxMIOSiHrTR1V6VXw
+permalink: /.well-known/acme-challenge/pnH_ee8-uoa81q0bsMAZuzDmOYZlCjfcxJoQuErazTc.html
 
 ---
 
-lmnaSCS9fDKdSNQHf_CL0m-QnApxMIOSiHrTR1V6VXw._Fmxv5cYChMq-ZhtvuK4MCocZHorOKatkcFx7CPhI44
+pnH_ee8-uoa81q0bsMAZuzDmOYZlCjfcxJoQuErazTc.PCuQKQH631_f0fR2fb1Zv08WQVOGdxwjtLBvK_DO5bQ
